--- a/_sass/pages/home-blog-projects.sass
+++ b/_sass/pages/home-blog-projects.sass
@@ -1,5 +1,6 @@
 .home,
 .blog,
+.tags,
 .projects
     margin-top: 125px
 
@@ -25,6 +26,7 @@
 
 .home > .list,
 .blog > .list,
+.tags > .list,
 .projects > .list
     > .item
         display: block
