--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -17,7 +17,7 @@
 	    {% if site.tags == true %}
 	        {% if page.title != "Tags" %}
                 <li class="item">
-                    <a class="link" href="{{ site.url }}/tags">Tags</a>
+                    <a class="link" href="{{ site.url }}/tags">Tagsmissing</a>
                 </li>
             {% endif %}
         {% endif %}
