--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -6,6 +6,22 @@
             </li>
         {% endif %}
 
+        {% if site.about == true %}
+            {% if page.title != "About" %}
+                <li class="item">
+                    <a class="link" href="{{ site.url }}/about">About</a>
+                </li>
+            {% endif %}
+        {% endif %}
+
+        {% if site.projects == true %}
+            {% if page.title != "Projects" %}
+                <li class="item">
+                    <a class="link" href="{{ site.url }}/projects">Projects</a>
+                </li>
+            {% endif %}
+        {% endif %}        
+
         {% if site.blog == true %}
             {% if page.title != "Blog" %}
                 <li class="item">
@@ -14,27 +30,14 @@
             {% endif %}
         {% endif %}
 
-        <li class="item">
-            <a class="link" href="{{ site.url }}/tags">Tagsmissing</a>
-        </li>
+        {% if site.tags == true %}
+            {% if page.title != "tags" %}
+                <li class="item">
+                    <a class="link" href="{{ site.url }}/tags">Tags</a>
+                </li>
+            {% endif %}
+        {% endif %}
       
-        {% if site.projects == true %}
-            {% if page.title != "Projects" %}
-                <li class="item">
-                    <a class="link" href="{{ site.url }}/projects">Projects</a>
-                </li>
-            {% endif %}
-        {% endif %}
-
-	    {% if site.about == true %}
-            {% if page.title != "About" %}
-                <li class="item">
-                    <a class="link" href="{{ site.url }}/about">About</a>
-                </li>
-            {% endif %}
-        {% endif %}
-        
-
         {% if site.resume == true %}
             <li class="item">
                 <a class="link" href="{% if site.resume-external %}{{ site.resume-url }}{% else %}{{ site.url }}/{{ site.resume-url }}{% endif %}">Résumé</a>
