--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -31,7 +31,7 @@
         {% endif %}
 
         {% if site.tags-page == true %}
-            {% if page.title != "tags" %}
+            {% if page.title != "Tags" %}
                 <li class="item">
                     <a class="link" href="{{ site.url }}/tags">Tags</a>
                 </li>
