--- a/_sass/components/nav.sass
+++ b/_sass/components/nav.sass
@@ -15,6 +15,10 @@
             padding: 20px 10px
             text-decoration: none
 
+        hr 
+            margin: 10px 0 0
+
+
 .nav
     position: absolute
     right: 0
