--- a/_sass/base/general.sass
+++ b/_sass/base/general.sass
@@ -27,9 +27,6 @@ h3
 h4
 	font-size: 1.6rem
 
-hr 
-	margin: 10px 0 10px 0
-
 a
 	color: $delta
 	text-decoration: underline
@@ -86,7 +83,7 @@ blockquote
 hr
 	border: none
 	height: 1px
-	margin: 40px auto
+	margin: 10px 0
 	background: #eee
 	width: 100%
 
