--- a/_includes/blog-post.html
+++ b/_includes/blog-post.html
@@ -1,8 +1,21 @@
 <div class="item {% if post.star %}star{% endif %}">
     <a class="url" href="{{ site.url }}{{ post.url }}">
-        <img class="title-image" style="float:left;width:20px;height:15px" src={{ "/assets/images/" | prepend: site.baseurl | append: post.img}}>
+        <img class="title-image" style="float:left;width:20px;height:15px" src={{ "/assets/images/" | prepend: site.baseurl | append: post.img}}></img>
         <aside class="date"><time datetime="{{ post.date | date:"%d-%m-%Y" }}">{{ post.date | date: "%b %d %Y" }}</time></aside>
         <h3 class="title">{{ post.title }}</h3>
         <p>{{ post.description }}</p>
     </a>
+</div>
+
+<div class="kxpost">
+    {% if post.img %}
+      <img class="post-thumbnail" src={{"/assets/img/" | prepend: site.baseurl | append: post.img}})></img>
+    {% else %}
+    {% endif %}
+    <div class="post-content">
+      <h2 class="post-title"><a href="{{post.url | prepend: site.baseurl}}">{{post.title}}</a></h2>
+      <p>{{ post.content | strip_html | truncatewords: 15 }}</p>
+      <span class="post-date">{{post.date | date: '%Y, %b %d'}}&nbsp;&nbsp;&nbsp;—&nbsp;</span>
+      <span class="post-words">{% capture words %}{{ post.content | number_of_words }}{% endcapture %}{% unless words contains "-" %}{{ words | plus: 250 | divided_by: 250 | append: " minute read" }}{% endunless %}</span>
+    </div>
 </div>
