--- a/_sass/pages/post.sass
+++ b/_sass/pages/post.sass
@@ -60,7 +60,7 @@
         .next
             text-align: right
 
-.mypost
+//.mypost
   background-color: $white
   margin-bottom: 1.5rem
   header
@@ -89,3 +89,4 @@
       margin: 0
       color: #202020
       background-color: #20a000
+
