--- a/_sass/pages/post.sass
+++ b/_sass/pages/post.sass
@@ -46,6 +46,14 @@
         //max-height: 120px
         display: block
         margin: 0 auto
+    
+    > .post-title-image
+        //max-height: 120px
+        display: block
+        float: left
+        min-height: 11rem
+        width: auto
+        margin: 0 10px
 
     > .blog-navigation
         font-size: 1.4rem
