--- a/_sass/pages/home-blog-projects.sass
+++ b/_sass/pages/home-blog-projects.sass
@@ -74,3 +74,12 @@
         position: relative
         top: -4px
         margin-right: 10px
+
+    > .post-title-image
+        //max-height: 120px
+        display: block
+        float: left
+        min-height: 11rem
+        width: auto
+        margin: 0 10px
+
