--- a/_sass/pages/home-blog-projects.sass
+++ b/_sass/pages/home-blog-projects.sass
@@ -79,7 +79,10 @@
         //max-height: 120px
         display: block
         float: left
-        min-height: 11rem
+        max-height: 10rem
         width: auto
         margin: 0 10px
+        position: relative
+        bottom: 0.75rem
+        max-width: 75%
 
