--- a/_includes/blog-post.html
+++ b/_includes/blog-post.html
@@ -6,3 +6,12 @@
         <p>{{ post.description }}</p>
     </a>
 </div>
+
+<article class="kxpost">
+    <img class="post-thumbnail" src={{"assets/images/" | prepend: site.baseurl | append: post.img}}></img>
+    <div class="post-content">
+        <h2 class="post-title"><a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a></h2>
+        <p>{{ post.description }}</p>
+        <span class="post-date">{{ post.date | date: "%b %d %Y" }}</span>
+    </div>
+</article>
