--- a/_sass/base/general.sass
+++ b/_sass/base/general.sass
@@ -132,8 +132,9 @@ pre
 .wrapper-large
 	max-width: 810px
 
-article, post
-    .kxpost 
+article, 
+div
+    > .kxpost 
         width: 100%
         max-width: 100%
         margin-bottom: 1.5rem
