--- a/_sass/base/general.sass
+++ b/_sass/base/general.sass
@@ -132,8 +132,7 @@ pre
 .wrapper-large
 	max-width: 810px
 
-article, 
-div
+article, div > .blog > .list
     > .kxpost 
         width: 100%
         max-width: 100%
