--- a/_includes/blog-post.html
+++ b/_includes/blog-post.html
@@ -1,5 +1,6 @@
-<div class="item {% if post.star %}star{% endif %}">
-    <a class="url" href="{{ site.url }}{{ post.url }}">
+<!--<div class="item {% if post.star %}star{% endif %}">-->
+<div class="kxpost">
+        <a class="url" href="{{ site.url }}{{ post.url }}">
         <img class="post-title-image" src={{ "/assets/images/" | prepend: site.baseurl | append: post.img}}></img>
         <aside class="date"><time datetime="{{ post.date | date:"%d-%m-%Y" }}">{{ post.date | date: "%b %d %Y" }}</time></aside>
         <h3 class="title">{{ post.title }}</h3>
