--- a/_sass/pages/post.sass
+++ b/_sass/pages/post.sass
@@ -54,7 +54,7 @@
         float: left
         min-height: 11rem
         width: auto
-        margin: 0
+        margin: 0 10px
 
     > .blog-navigation
         font-size: 1.4rem
