--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -37,12 +37,26 @@
                 </li>
             {% endif %}
         {% endif %}
+
+        {% if site.research == true %}
+            {% if page.title != "Research" %}
+                <li class="item">
+                    <a class="link" href="{{ site.url }}/research">Research</a>
+                </li>
+            {% endif %}
+        {% endif %}
         
         {% if site.resume == true %}
             <li class="item">
                 <a class="link" href="{% if site.resume-external %}{{ site.resume-url }}{% else %}{{ site.url }}/{{ site.resume-url }}{% endif %}">Résumé</a>
             </li>
         {% endif %}
-        
+
+        {% if site.cv == true %}
+            <li class="item">
+                <a class="link" href="{% if site.cv-external %}{{ site.cv-url }}{% else %}{{ site.url }}/{{ site.cv-url }}{% endif %}">Curriculum Vitae</a>
+            </li>
+        {% endif %}
+
     </ul>
 </nav>
