--- a/_sass/base/variables.sass
+++ b/_sass/base/variables.sass
@@ -1,4 +1,5 @@
-$fontSans: "Helvetica Neue", Helvetica, Arial, sans-serif
+$fontSans: Helvetica, Arial, sans-serif
+$fontSerif: Rockwell, Courier
 $fontMonospace: "Consolas", Liberation Mono, Menlo, Courier, monospace
 
 $alpha: #666
