--- a/_sass/base/general.sass
+++ b/_sass/base/general.sass
@@ -2,21 +2,19 @@ body, html
 	font-size: 62.5%
 
 body
-	line-height: 1
-	font: 16px $fontSans
-	color: $alpha
+	line-height: 1.5
+	font: 14px $fontSerif
+	color: $beta
 
 h1, h2, h3, h4
-	font-family: $fontSans
+	font-family: $fontSerif
 	color: $beta
 	-webkit-font-smoothing: antialiased
 	text-rendering: optimizeLegibility
 
 h1
 	font-size: 3rem
-	letter-spacing: -1px
-	color: $beta
-	font-weight: 700
+	font-weight: 800
 
 h2
 	font-size: 2.2rem
@@ -28,18 +26,12 @@ h4
 	font-size: 1.6rem
 
 a
-	color: $delta
-	text-decoration: underline
+	color: $beta
 
 p
-	line-height: 1.7
-	color: $alpha
-	font-weight: 300
-	margin-bottom: 20px
-	letter-spacing: 0.4px
-
-	@media #{$mobile}
-		letter-spacing: 0.2px
+	line-height: 1.5
+	color: $beta
+	font-weight: normal
 
 strong
 	font-weight: 400
@@ -48,9 +40,7 @@ strong
 ul,
 ol
 	li
-		line-height: 2.4rem
-		font-weight: 300
-		color: $alpha
+		color: $beta
 
 img,
 pre,
