--- a/_includes/style.scss
+++ b/_includes/style.scss
@@ -5,6 +5,7 @@
 @import "base/general";
 @import "base/helpers";
 @import "base/table";
+@import "base/container";
 
 @import "pages/home-blog-projects";
 @import "pages/page";
