--- a/_sass/base/general.sass
+++ b/_sass/base/general.sass
@@ -3,7 +3,7 @@ body, html
 
 body
 	line-height: 1.5
-	font: 14px $fontSerif
+	font: 16px $fontSerif
 	color: $beta
 
 h1, h2, h3, h4
@@ -14,7 +14,7 @@ h1, h2, h3, h4
 
 h1
 	font-size: 3rem
-	font-weight: 800
+	font-weight: bold
 
 h2
 	font-size: 2.2rem
@@ -32,10 +32,6 @@ p
 	line-height: 1.5
 	color: $beta
 	font-weight: normal
-
-strong
-	font-weight: 400
-	color: #000
 
 ul,
 ol
@@ -107,9 +103,9 @@ pre
 .wrapper-normal,
 .wrapper-large
 	height: 100%
-	width: 96%
 	margin: 0 auto
-
+	width: 75%
+        
 	@media #{$mobile}
 		width: 88%
 
@@ -117,7 +113,7 @@ pre
 		width: 88%
 
 .wrapper-normal
-	max-width: 560px
+	max-width: 50%
 
 .wrapper-large
-	max-width: 810px
+	max-width: 75%
