--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,4 @@
-{% if page.title == "Home"
-   or page.title == "Blog"
-   or page.title == "Projects"
-%}{% assign showHeader = true %}{% endif %}
+{% if page.title == "Home"%}{% assign showHeader = true %}{% endif %}
 
 {% if showHeader == true %}
     <header class="header-home {% if site.animation %}animated{% endif %}">
