--- a/_sass/components/header.sass
+++ b/_sass/components/header.sass
@@ -6,12 +6,12 @@
     z-index: 99
 
     > .link > .selfie
-        width: 125px
+        max-width: 400px
+        width: 35%
         margin-bottom: 25px
-        border-radius: 100%
+        border-radius: 30%
         transition: all .2s
-        box-shadow: 0
-        opacity: 1
+        box-shadow: 0 0px 30px 0 rgba(0,0,0,0.20)
 
         &:hover
             box-shadow: 0 0px 4px 0 rgba(0,0,0,0.18), 0 0px 12px 0 rgba(0,0,0,0.15)
@@ -23,7 +23,7 @@
 
     > .description
         font-size: 1.85rem
-        font-weight: 300
+        font-weight: lighter
         font-style: normal
         color: $gama
         width: 70%
@@ -31,4 +31,4 @@
 
         // if you put some links in your bio. ;)
         a
-            font-weight: 200
+            font-weight: lighter
