--- a/_sass/components/nav.sass
+++ b/_sass/components/nav.sass
@@ -1,46 +1,19 @@
-.nav,
-.nav-home
+.nav
+    position: absolute
+    right: 0
+    left: 0
+    top: 0
+    box-shadow: 0 0.125rem 0.25rem 0 rgba(0, 0, 0, 0.11)
+    
     > .list
-        list-style: none
-        margin: 0
         padding: 0 13px 0
 
         > .item
             display: inline-block
 
         > .item > .link
-            display: inline-block
-            font-weight: 300
+            font-weight: bold
             font-size: 1.4rem
             padding: 20px 10px
             text-decoration: none
 
-.nav
-    position: absolute
-    right: 0
-    top: 0
-
-    > .list
-        padding: 0 13px 0
-
-        > .item > .link
-            font-size: 1.4rem
-            padding: 20px 10px
-
-.nav-home
-    margin-top: 40px
-    text-align: center
-
-    > .list
-        padding: 0
-
-        > .item > .link
-            font-size: 2rem
-            padding: 7px 15px
-            margin: 0
-            border-radius: 4%
-            transition: all .4s ease-in-out
-            /*width: 70px*/
-
-            &:hover
-                color: $alpha
