modify navigation and delete unused files

--- a/_sass/base/container.sass
+++ b/_sass/base/container.sass
@@ -1,6 +1,7 @@
 .nav > .container
         display: flex
         align-items: center
+        justify-content: space-between
         flex-wrap: nowrap
         width: 100%
         max-width: 1500px
@@ -16,7 +17,6 @@
         > .right
                 display: flex!important
                 justify-content: flex-end!important
-                flex-grow: 1
                 flex-basis: auto
 
 .nav > .container > .left, 
