--- a/_sass/pages/page.sass
+++ b/_sass/pages/page.sass
@@ -3,7 +3,8 @@
 
     > h1
         text-align: center
-        margin-bottom: 6rem
+        margin-bottom: 3rem
+        margin-top: 6rem
 
 .about
     img
@@ -11,3 +12,6 @@
         margin: 3rem auto
         display: block
         border-radius: 100%
+
+
+
