--- a/_sass/base/variables.sass
+++ b/_sass/base/variables.sass
@@ -7,6 +7,7 @@ $beta: #222
 $gama: #aaa
 $delta: #4b0082
 $epsilon: #ededed
+$zeta: #303030
 
 $mobile: "only screen and (max-width: 400px)"
 $tablet: "only screen and (min-width: 400px) and (max-width: 1050px)"
