--- a/_sass/base/general.sass
+++ b/_sass/base/general.sass
@@ -6,7 +6,7 @@ body
 	font: 16px $fontSerif
 	color: $beta
 
-h1, h2, h3, h4, h5, h6
+h1, h2, h3, h4
 	font-family: $fontSerif
 	color: $beta
 	-webkit-font-smoothing: antialiased
@@ -24,10 +24,6 @@ h3
 
 h4
 	font-size: 1.6rem
-
-h5, h6
-	font-size: 1.6rem
-        color: $zeta
 
 a
 	color: $beta
