--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -19,9 +19,11 @@
             </li>
         {% endif %}        
 
+        {% if site.blog == true %}
             <li class="item">
                 <a class="link" href="{{ site.url }}/blog">Blog</a>
             </li>
+        {% endif %}        
 
 	    <!--
             <li class="item">
@@ -31,6 +33,14 @@
 
             <li class="item">
                 <a class="link" href="{{ site.url }}/research">Research</a>
+            </li>
+
+            <li class="item">
+                <a class="link" href="{{ site.url }}/links">Links</a>
+            </li>
+
+            <li class="item">
+                <a class="link" href="{{ site.url }}/gallery">Gallery</a>
             </li>
         
         {% if site.resume == true %}
