--- a/_sass/pages/page.sass
+++ b/_sass/pages/page.sass
@@ -5,6 +5,13 @@
         text-align: center
         margin-bottom: 3rem
         margin-top: 6rem
+    h3
+        margin-bottom: 1rem
+        margin-top: 2rem
+        font-size: 1.4rem
+    p
+        margin: 0
+        font-size: 1.4rem
 
 .about
     img
