--- a/_sass/pages/page.sass
+++ b/_sass/pages/page.sass
@@ -10,6 +10,7 @@
         margin-top: 2rem
         font-size: 1.4rem
     p
+        margin: 0
         font-size: 1.4rem
         > .blog_p
                 margin: 15px auto
