--- a/_sass/pages/page.sass
+++ b/_sass/pages/page.sass
@@ -12,8 +12,10 @@
     p
         margin: 0
         font-size: 1.4rem
-        > .blog_p
-                margin: 15px auto
+
+.blog_p
+    margin: 15px auto
+    font-size: 1.4rem
 
 .about
     img
