--- a/_sass/base/variables.sass
+++ b/_sass/base/variables.sass
@@ -1,6 +1,6 @@
 $fontSans: Helvetica, Arial, sans-serif
 $fontSerif: Rockwell, Courier
-$fontMonospace: "Consolas", Liberation Mono, Menlo, Courier, monospace
+$fontMonospace: Courier New, "Consolas", Liberation Mono, Menlo, monospace
 
 $alpha: #666
 $beta: #222
