--- a/_sass/pages/page.sass
+++ b/_sass/pages/page.sass
@@ -11,7 +11,10 @@
         font-size: 1.4rem
     p
         margin: 0
-        font-size: 1.4rem
+        font-size: 1.4rem $fontMonospace
+
+    a
+        font-size: $fontSerif
 
 .blog_p
     margin: 15px auto
