--- a/_sass/pages/page.sass
+++ b/_sass/pages/page.sass
@@ -11,10 +11,11 @@
         font-size: 1.4rem
     p
         margin: 0
-        font-size: 1.4rem $fontMonospace
-
-    a
-        font-size: $fontSerif
+        font-size: 1.4rem
+        font-family: $fontMonospace
+    li
+        a
+            font-family: $fontSerif
 
 .blog_p
     margin: 15px auto
