updated homepage, research page, and CV

--- a/_sass/pages/page.sass
+++ b/_sass/pages/page.sass
@@ -1,3 +1,4 @@
+/* controls the style on the pages using the 'page' layout, for example, the homepage */
 .page
     margin-top: 125px
 
@@ -13,7 +14,9 @@
         margin: 0
         font-size: 1.4rem
         font-family: $fontMonospace
-    li
+
+    /* controls the font style in the top tab navigator */
+    .nav
         a
             font-family: $fontSerif
 
