--- a/_sass/base/table.scss
+++ b/_sass/base/table.scss
@@ -1,15 +1,8 @@
 th, td {
-  padding: 15px;
+  font-weight: normal;
   text-align: left;
+  vertical-align: top;
+  font-family: $fontMonospace;
+  font-size: 1.4rem;
+  padding: 0pt 10pt;
 }
-
-td {
-  width: 12%
-}
-
-tr:nth-child(even) {background-color: #f2f2f2;}
-
-th {
-    background-color: rgba(255, 166, 107, 0.829);
-    color: white;
-  }
