update the home page, update the sass settings

--- a/_sass/base/container.sass
+++ b/_sass/base/container.sass
@@ -4,7 +4,7 @@
         justify-content: space-between
         flex-wrap: nowrap
         width: 100%
-        max-width: 1500px
+        max-width: 100rem
         margin-right: auto
         margin-left: auto
         box-sizing: border-box
@@ -22,21 +22,21 @@
 .nav > .container > .left, 
 .nav > .container > .right
         > .link
-                padding: 0 13px 0
+                padding: 0 2rem 0
                 display: inline-block
                 font-weight: bold
                 font-size: 1.4rem
-                padding: 20px 10px
+                padding: 3rem 1.5rem
                 text-decoration: none
                 
         > .list
-                padding: 0 13px 0
+                padding: 0  0
                 > .item
                         display: inline-block
                 > .item > .link
                         font-weight: bold
                         font-size: 1.4rem
-                        padding: 20px 10px
+                        padding: 3rem 1.5rem
                         text-decoration: none
  
 
