--- a/_sass/base/table.scss
+++ b/_sass/base/table.scss
@@ -1,8 +1,8 @@
-th, td {
+th, tr, td {
   font-weight: normal;
   text-align: left;
   vertical-align: top;
-  font-family: $fontMonospace;
+  font-family: $fontSerif;
   font-size: 1.4rem;
-  padding: 0pt 10pt;
+  padding: 0.5rem 1.5rem;
 }
