--- a/_sass/base/variables.sass
+++ b/_sass/base/variables.sass
@@ -1,5 +1,5 @@
 $fontSans: Helvetica, Arial, sans-serif
-$fontSerif: Rockwell, Courier
+$fontSerif: Garamond, Times New Roman
 $fontMonospace: Courier New, "Consolas", Liberation Mono, Menlo, monospace
 
 $alpha: #666
@@ -9,7 +9,7 @@ $delta: #4b0082
 $epsilon: #ededed
 $zeta: #303030
 
-$mobile: "only screen and (max-width: 400px)"
-$tablet: "only screen and (min-width: 400px) and (max-width: 1050px)"
-$above: "only screen and (min-width: 780px)"
-$below: "only screen and (max-width: 780px)"
+$mobile: "only screen and (max-width: 75rem)"
+$tablet: "only screen and (max-width: 100rem)"
+$above: "only screen and (min-width: 50rem)"
+$below: "only screen and (max-width: 100rem)"
