--- a/_sass/pages/page.sass
+++ b/_sass/pages/page.sass
@@ -1,27 +1,26 @@
 /* controls the style on the pages using the 'page' layout, for example, the homepage */
 .page
-    margin-top: 125px
+    margin-top: 15rem
 
-    > h1
+    h1
         text-align: center
         margin-bottom: 3rem
         margin-top: 6rem
     h3
         margin-bottom: 1rem
         margin-top: 2rem
-        font-size: 1.4rem
     p
         margin: 0
         font-size: 1.4rem
-        font-family: $fontMonospace
+        font-family: $fontSerif
 
     /* controls the font style in the top tab navigator */
     .nav
         a
-            font-family: $fontSerif
+            font-family: $fontSans
 
 .blog_p
-    margin: 15px auto
+    margin: 2rem auto
     font-size: 1.4rem
 
 .about
