--- a/_sass/pages/post.sass
+++ b/_sass/pages/post.sass
@@ -1,7 +1,6 @@
 .post
-    margin-top: 125px
-    //margin-bottom: 2rem
-
+    margin-top: 15rem
+        
     > .title
         text-align: center
         margin-bottom: 2rem
