--- a/_sass/base/general.sass
+++ b/_sass/base/general.sass
@@ -7,23 +7,23 @@ body
 	color: $beta
 
 h1, h2, h3, h4
-	font-family: $fontSerif
+	font-family: $fontSans
 	color: $beta
 	-webkit-font-smoothing: antialiased
 	text-rendering: optimizeLegibility
 
 h1
-	font-size: 3rem
+	font-size: 2.2rem
 	font-weight: bold
 
 h2
-	font-size: 2.2rem
+	font-size: 2.0rem
 
 h3
-	font-size: 2rem
+	font-size: 1.6rem
 
 h4
-	font-size: 1.6rem
+	font-size: 1.4rem
 
 a
 	color: $beta
@@ -99,7 +99,7 @@ pre
 .wrapper-large
 	height: 100%
 	margin: 0 auto
-	width: 75%
+	width: 95%
         
 	@media #{$mobile}
 		width: 88%
@@ -108,7 +108,7 @@ pre
 		width: 88%
 
 .wrapper-normal
-	max-width: 50%
+	max-width: 75rem
 
 .wrapper-large
-	max-width: 75%
+	max-width: 100rem
