update sass settings

--- a/_sass/base/variables.sass
+++ b/_sass/base/variables.sass
@@ -1,5 +1,5 @@
-$fontSans: Helvetica, Arial, sans-serif
-$fontSerif: Garamond, Times New Roman
+$fontSans: Verdana, Helvetica, Arial, Calibri, sans-serif
+$fontSerif: Georgia, Cambria, Garamond,Times New Roman
 $fontMonospace: Courier New, "Consolas", Liberation Mono, Menlo, monospace
 
 $alpha: #666
