--- a/_includes/blog-post.html
+++ b/_includes/blog-post.html
@@ -1,10 +1,8 @@
-<style> .blog_p {margin: 15px auto} </style>
-
-<div class="item {% if post.star %}star{% endif %}" style="min-height: 135px">
+<div class="item {% if post.star %}star{% endif %}" style="min-height: 12rem">
         <a class="url" href="{{ site.url }}{{ post.url }}">
         <img class="post-title-image" src={{ "/assets/images/" | prepend: site.baseurl | append: post.img}}></img>
         <aside class="date"><time datetime="{{ post.date | date:"%d-%m-%Y" }}">{{ post.date | date: "%b %d %Y" }}</time></aside>
         <h3 class="title">{{ post.title }}</h3>
-        <p class="blog_p">{{ post.description }}</p>
+        <p>{{ post.description }}</p>
     </a>
 </div>
