--- a/_sass/base/general.sass
+++ b/_sass/base/general.sass
@@ -11,10 +11,10 @@ h1, h2, h3, h4
 	color: $beta
 	-webkit-font-smoothing: antialiased
 	text-rendering: optimizeLegibility
+	font-weight: bold
 
 h1
 	font-size: 2.2rem
-	font-weight: bold
 
 h2
 	font-size: 2.0rem
@@ -40,11 +40,11 @@ iframe
 
 img,
 pre
-	border-radius: 4px
+	border-radius: 0.4rem
 
 figcaption
 	position: relative
-	top: -20px
+	top: -1.5rem
 	left: 0
 	right: 0
 	margin: 0 auto
