--- a/_sass/components/nav.sass
+++ b/_sass/components/nav.sass
@@ -6,7 +6,7 @@
     box-shadow: 0 0.125rem 0.25rem 0 rgba(0, 0, 0, 0.11)
     
     > .list
-        padding: 0 2rem 0
+        padding: 0 2rem
 
         > .item
             display: inline-block
@@ -14,6 +14,10 @@
         > .item > .link
             font-weight: bold
             font-size: 1.4rem
-            padding: 3rem 1.5rem
+            padding: 0rem 1.5rem
             text-decoration: none
+
+    > a
+        font-family: $fontSans
+
 
