resolve syntax error at home-blog-projects.sass:28

--- a/_sass/pages/home-blog-projects.sass
+++ b/_sass/pages/home-blog-projects.sass
@@ -25,7 +25,7 @@
             border-radius: 3px
 
 .blog > .list > .item
-    min-height: 12rem;
+    min-height: 12rem
 
 .home > .list,
 .blog > .list,
