update css settings

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,8 +12,8 @@
             </span>
         {% endif %}
 
-        <h1 class="title">{{ site.name }}</h1>
-        <h2 class="description">{{ site.bio }}</h2>
+        <h1>{{ site.name }}</h1>
+        <h4 class="description">{{ site.bio }}</h4>
 
         {% include social-links.html %}
     </header>
