--- a/_sass/base/general.sass
+++ b/_sass/base/general.sass
@@ -7,7 +7,7 @@ body
 	color: $beta
 
 h1, h2, h3, h4
-	font-family: $fontSans
+	font-family: $fontHeader
 	color: $beta
 	-webkit-font-smoothing: antialiased
 	text-rendering: optimizeLegibility
@@ -32,6 +32,7 @@ p
 	line-height: 1.5
 	color: $beta
 	font-weight: normal
+	font-family: $fontSerif
 
 img,
 pre,
