--- a/_sass/base/variables.sass
+++ b/_sass/base/variables.sass
@@ -1,6 +1,7 @@
 $fontSans: Verdana, Helvetica, Arial, Calibri, sans-serif
 $fontSerif: Georgia, Cambria, Garamond,Times New Roman
 $fontMonospace: Courier New, "Consolas", Liberation Mono, Menlo, monospace
+$fontHeader: Rockwell
 
 $alpha: #666
 $beta: #222
