--- a/_sass/components/header.sass
+++ b/_sass/components/header.sass
@@ -6,29 +6,18 @@
     z-index: 99
 
     > .link > .selfie
-        max-width: 150px
+        max-width: 15rem
         width: 30%
-        margin-bottom: 25px
         border-radius: 30%
         transition: all .2s
-        box-shadow: 0 0px 30px 0 rgba(0,0,0,0.20)
+        box-shadow: 0 0 1.5rem 0 rgba(0,0,0,0.20)
 
         &:hover
-            box-shadow: 0 0px 4px 0 rgba(0,0,0,0.18), 0 0px 12px 0 rgba(0,0,0,0.15)
+            box-shadow: 0 0px 0.5rem 0 rgba(0,0,0,0.18), 0 0px 12px 0 rgba(0,0,0,0.15)
             opacity: .8
 
-    > .title
-        font-size: 2.5rem
-        margin: 0 0 13px
-
     > .description
-        font-size: 1.4rem
         font-weight: lighter
-        font-style: normal
         color: $gama
         width: 70%
-        margin: 0 auto 30px
-
-        // if you put some links in your bio. ;)
-        a
-            font-weight: lighter
+        margin: 0 auto
