--- a/_sass/components/nav.sass
+++ b/_sass/components/nav.sass
@@ -4,7 +4,7 @@
     left: 0
     top: 0
     box-shadow: 0 0.125rem 0.25rem 0 rgba(0, 0, 0, 0.11)
-    
+
     > .list
         padding: 0 2rem
 
@@ -17,7 +17,8 @@
             padding: 0rem 1.5rem
             text-decoration: none
 
-    > a
-        font-family: $fontSans
+    a
+        font-family: $fontHeader    
+
 
 
